Horizontal Scroll caused by Form not fixed

--- a/css/snypemedia.css
+++ b/css/snypemedia.css
@@ -12,6 +12,15 @@ body {
     font-size: 14px;
     line-height: 20px;
     color: #333;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 /* Basic Elements */
@@ -75,8 +84,7 @@ ol {
 
 section {
     width: 100vw;
-    max-width: 100vw;
-    overflow: hidden;
+    max-width: 100%;
     height: auto;
     position: relative;
     display: -webkit-box;
@@ -99,19 +107,16 @@ section {
     max-width: 100vw;
     height: auto;
     padding: 25px;
+    position: relative;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 nav
@@ -121,18 +126,22 @@ form {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     padding: 15px;
-        color: rgb(204, 204, 204);
+    color: rgb(204, 204, 204);
+    height: auto;
+    width: auto;
 }
 
 label {
     font-size: 14px;
     line-height: 20px;
     margin-top: 10px;
+    display: block;
 }
 
 input {
